# AndroidRenderer

./: .gitignore  README.md  gradle.properties  settings.gradle
Profiles/AndroidBaseline/include/: vulkan_profiles.h  vulkan_profiles.hpp
Profiles/AndroidBaseline/src/: vulkan_profiles.cpp
Profiles/AndroidRaytracing/: VK_SAH_andoird_raytracing.json  VK_SAH_android_raytracing.json  vp_gpuinfo_alps_k6985v1_64_8gb_mcl50_38_1_0_android_13_0.json  vp_gpuinfo_alps_k6989v1_64_44_0_0_android_14_0.json  vp_gpuinfo_ayn_odin2_512_676_0_android_13_0.json  vp_gpuinfo_meizu_meizu_20_pro_512_676_0_android_13_0.json  vp_gpuinfo_motorola_xt2301_5_512_676_0_android_14_0.json  vp_gpuinfo_nubia_nx769j_512_744_1_android_14_0.json  vp_gpuinfo_oculus_quest_3_512_746_0_android_12_0.json  vp_gpuinfo_oneplus_cph2573_512_744_8_android_14_0.json  vp_gpuinfo_oneplus_pja110_512_676_0_android_13_0.json  vp_gpuinfo_samsung_sm_s901b_2_0_0_android_14_0.json  vp_gpuinfo_samsung_sm_s9110_512_676_0_android_13_0.json  vp_gpuinfo_samsung_sm_x816b_512_676_0_android_14_0.json  vp_gpuinfo_sony_sog10_512_676_0_android_13_0.json  vp_gpuinfo_vivo_i2212_512_676_0_android_13_0.json  vp_gpuinfo_vivo_v2324a_44_1_0_android_14_0.json  vp_gpuinfo_xiaomi_21121210g_512_676_0_android_13_0.json  vp_gpuinfo_xiaomi_2211133g_512_744_4_android_13_0.json  vp_gpuinfo_xiaomi_23117rk66c_512_744_6_android_14_0.json  vp_gpuinfo_xiaomi_m2012k11ag_512_744_16_android_13_0.json  vp_gpuinfo_xiaomi_poco_f2_pro_512_502_0_android_13_0.json  vp_gpuinfo_xiaomi_redmi_k30_pro_zoom_edition_512_615_0_android_12_0.json
Profiles/Pixel7Pro/: vp_gpuinfo_google_pixel_7_pro_46_0_0_android_14_0.json
Profiles/Pixel7Pro/include/: vulkan_profiles.h  vulkan_profiles.hpp
Profiles/Pixel7Pro/src/: vulkan_profiles.cpp
RenderCore/: README.md  SahCore.cmake
RenderCore/assets/: AlphaTest.blend  AlphaTest.blend1  AlphaTest.glb  AlphaTest.gltf
RenderCore/console/: auto_cvar_enum.cpp  auto_cvar_enum.hpp  cvars.cpp  cvars.hpp
RenderCore/core/: android_system_interface.cpp  application.cpp  application.hpp  box.cpp  box.hpp  halton_sequence.cpp  halton_sequence.hpp  imgui_eastl.cpp  imgui_eastl.hpp  issue_breakpoint.hpp  object_pool.hpp  operator_new.cpp  percent_encoding.cpp  percent_encoding.hpp  string_conversion.cpp  string_conversion.hpp  system_interface.cpp  system_interface.hpp  user_options.hpp  user_options_controller.cpp  user_options_controller.hpp  visitor.cpp  visitor.hpp  win32_system_interface.cpp
RenderCore/gltf/: gltf_model.cpp  gltf_model.hpp
RenderCore/input/: input_event.cpp  input_event.hpp  input_manager.cpp  input_manager.hpp
RenderCore/model_import/: base64.cpp  base64.hpp  gltf_model.cpp  gltf_model.hpp  mesh_voxelizer.cpp  mesh_voxelizer.hpp
RenderCore/render/: antialiasing_type.hpp  basic_pbr_material.hpp  bloomer.cpp  bloomer.hpp  directional_light.cpp  directional_light.hpp  fsr3.cpp  fsr3.hpp  gbuffer.hpp  indirect_drawing_utils.cpp  indirect_drawing_utils.hpp  light_propagation_volume.cpp  light_propagation_volume.hpp  material_pipelines.cpp  material_pipelines.hpp  material_proxy.cpp  material_proxy.hpp  material_storage.cpp  material_storage.hpp  mesh.hpp  mesh_drawer.cpp  mesh_drawer.hpp  mesh_handle.hpp  mesh_storage.cpp  mesh_storage.hpp  mip_chain_generator.cpp  mip_chain_generator.hpp  noise_texture.cpp  noise_texture.hpp  procedural_sky.cpp  procedural_sky.hpp  raytracing_scene.cpp  raytracing_scene.hpp  render_doc_wrapper.cpp  render_doc_wrapper.hpp  render_scene.cpp  render_scene.hpp  scene_pass_type.hpp  scene_primitive.hpp  scene_renderer.cpp  (+10 more)
RenderCore/render/backend/: GpuTexture.hpp  GraphicsPipeline.cpp  acceleration_structure.hpp  blas_build_queue.cpp  blas_build_queue.hpp  buffer.hpp  buffer_state.hpp  buffer_usage_token.hpp  command_allocator.cpp  command_allocator.hpp  command_buffer.cpp  command_buffer.hpp  compiled_render_pass.cpp  compiled_render_pass.hpp  compute_shader.cpp  compute_shader.hpp  constants.hpp  descriptor_set_allocator.cpp  descriptor_set_allocator.hpp  descriptor_set_builder.cpp  descriptor_set_builder.hpp  descriptor_set_info.hpp  device_address.cpp  device_address.hpp  framebuffer.cpp  framebuffer.hpp  gpu_texture.hpp  graphics_pipeline.cpp  graphics_pipeline.hpp  handles.hpp  hit_group_builder.cpp  hit_group_builder.hpp  p_next_chain.cpp  p_next_chain.hpp  pipeline.cpp  pipeline.hpp  pipeline_builder.cpp  pipeline_builder.hpp  pipeline_cache.cpp  pipeline_cache.hpp  (+36 more)
RenderCore/render/gi/: global_illuminator.cpp  global_illuminator.hpp  irradiance_cache.cpp  irradiance_cache.hpp  light_propagation_volume.cpp  light_propagation_volume.hpp  rtgi.cpp  rtgi.hpp
RenderCore/render/phase/: ambient_occlusion_phase.cpp  ambient_occlusion_phase.hpp  depth_culling_phase.cpp  depth_culling_phase.hpp  gbuffer_phase.cpp  gbuffer_phase.hpp  gbuffes_phase.cpp  gbuffes_phase.hpp  lighting_phase.cpp  lighting_phase.hpp  motion_vectors_phase.cpp  motion_vectors_phase.hpp  phase_interface.cpp  phase_interface.hpp  ray_tracing_debug_phase.cpp  ray_tracing_debug_phase.hpp  rsm_vpl_pass.cpp  rsm_vpl_pass.hpp  sampling_rate_calculator.cpp  sampling_rate_calculator.hpp  sun_shadow_phase.cpp  sun_shadow_phase.hpp  ui_phase.cpp  ui_phase.hpp
RenderCore/render/sdf/: lpv_gv_voxelizer.cpp  lpv_gv_voxelizer.hpp  sh_volume_visualizer.cpp  sh_volume_visualizer.hpp  (+4 more)
RenderCore/shaders/: scatter_upload.comp  scatter_upload.comp.spv
RenderCore/shared/: README.md  basic_pbr_material.hpp  gi_probe.hpp  lpv.hpp  mesh_point.hpp  prelude.h  primitive_data.hpp  sun_light_constants.hpp  triangle.hpp  vertex_data.hpp  view_data.hpp  view_info.hpp  voxel_object_gpu.hpp  voxelizer_compute_pass_parameters.hpp  vpl.hpp
RenderCore/ui/: debug_menu.cpp  debug_menu.hpp
Tools/: Optimize-Textures.ps1  Remove-CompiledShaders.ps1  compile_shaders.py  compile_slang_shaders.py  optimize_gltf.py
Windows/: CMakeLists.txt  README.md  WindowsSettings.cap
Windows/src/: windows_application.cpp
app/: build.gradle
app/src/main/cpp/: AndroidMain.cpp  CMakeLists.txt
cmake/: glsl-shaders.cmake
docs/: DrawingMeshes.md  Renderer.md
(+156 files in other folders)
